# djangocms

./: .gcloudignore  .gitignore  404.html  CNAME  app.yaml  index.html  main.py  manage.py  mkdocs.yml  project.db  pyproject.toml  requirements.txt
.github/workflows/: automation.yml  ci.yml
developer/: index.html
developer/env/: index.html
docs/: development_env.md  index.md
docs/developer/: env.md  index.md
docs/user/: logging_in.md
events/: admin.py  cms_appconfig.py  cms_apps.py  competitions.py  decorators.py  models.py  plugin_models.py  urls.py
events/migrations/: 0001_initial.py  0002_alter_event_teams.py  0003_auto_20220326_2050.py  0004_auto_20220326_2108.py  0005_auto_20220326_2112.py  0006_auto_20220326_2120.py  0007_auto_20220326_2207.py  0008_auto_20220330_2057.py  0009_auto_20220330_2123.py  0010_auto_20220330_2133.py  0011_delete_teamconfig.py  0012_auto_20220331_0912_squashed_0015_auto_20220331_1023.py  0013_auto_20220331_1214.py  0014_auto_20220331_1814.py
events/views/: __init__.py  app.py  scrapers.py
firweb/: asgi.py  backends.py  context_processors.py  settings.py  urls.py  views.py  wsgi.py
firweb/fixtures/: initial_data.json
firweb/settings/: __init__.py  common.py  dev.py  prod.py
firweb/templates/: 404.html  base.html  frontend-base.html  fullwidth.html
firweb/templates/admin/: base.html
firweb/templates/menus/: breadcrumb.html  grandchild.html  navbar.html  navbar_offcanvas.html  navbar_wrap.html
firweb/templatetags/: url_checker.py
frontend/: .browserslistrc  asset-tags.ejs  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js  webpack.watch.js
frontend/sass/: bootstrap_vars.scss  colors.scss  djangocms_admin.scss  dropdown.scss  index.scss  nav-brand.scss
frontend/ts/: donate.ts  index.ts  mobile-nav.ts  reload.ts
search/: search_index.json
static/: .gitignore
theme/: frontend_base.ejs  package.json  postcss.config.js  webpack.common.js  webpack.dev.js  webpack.prod.js  webpack.watch.js
theme/sass/: _custom.scss  colors.scss  index.scss  nav-brand.scss
theme/ts/: donate.ts  index.ts  nav-switch.ts
user/: index.html
user/logging_in/: index.html
