[tool.poetry]
name = "firweb"
version = "0.1.0"
description = "Website for FIRST Illinois Robotics"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
django-cms = ">=3.9,<3.10"
djangocms-admin-style = ">=2.0,<3.0"
django-treebeard = ">=4.0,<5.0"
djangocms-text-ckeditor = ">=4.0,<5.0"
djangocms-link = ">=3.0,<4.0"
djangocms-icon = ">=2.0,<3.0"
djangocms-style = ">=3.0,<4.0"
djangocms-googlemap = ">=2.0,<3.0"
djangocms-video = ">=3.0,<4.0"
djangocms-file = ">=3.0,<4.0"
djangocms-picture = ">=3.0,<4.0"
#djangocms-bootstrap4 = ">=2.0,<3.0"
djangocms-bootstrap5 = { git = "https://github.com/gl-agnx/djangocms-bootstrap5.git", rev = "00c44b6"  }
easy-thumbnails = "^2.7.1"
django-filer = ">=1.3"
Django = "<3.3"
django-classy-tags = ">=2.0"
django-sekizai = ">=2.0"
django-mptt = ">0.9"
html5lib = ">=1.0.1"
Pillow = ">=3.0"
six = "^1.16.0"
pytz = "^2021.1"
uvicorn = { version = "0.14", extras = ["standard"]}
gunicorn = "^20.1.0"
django-storages = { version = "^1.11.1", extras = ["google"]}
django-environ = "^0.6"
google-cloud-secret-manager = "2.7.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
django-livereload-server = "0.3.2"
mysqlclient = "^2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
